<resources>
    <string name="app_name">Rating Moive App</string>
    <string name="password">Password</string>
    <string name="Rbutton">Register</string>
    <string name="unelevated_button_label_enabled">Login</string>
    <string name="LogButton">Login</string>
    <string name="regbutton">Register</string>
    <string name="title_activity_useractivity">useractivity</string>
    <string name="Profile">Profile</string>
    <string name="Contact">Contact Us</string>
    <string name="Location">Location</string>
    <string name="Cart">Cart</string>
    <string name="email">Email</string>
    <string name="new_movie_title">New Movie Title</string>
    <string name="description">Description</string>
    <string name="app_2_save_button">Save</string>
    <string name="app2_cancel_button">Cancel</string>
    <string name="Lb">Like</string>
    <string name="dislike_button">DISLIKE</string>
    <string name="LogOut">logout</string>
</resources>
