<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id = "@+id/Profile"
        android:title = "@string/Profile"
        app:showAsAction="always|withText"
        android:icon="@drawable/profile"
        />


    <item

        android:id = "@+id/Contact"
        android:title = "@string/Contact"
        app:showAsAction="ifRoom"
        android:icon="@drawable/support"

        />


    <item

        android:id = "@+id/Location"
        android:title = "@string/Location"
        app:showAsAction="ifRoom"
        android:icon="@drawable/location"
        />

    <item

        android:id = "@+id/LogOut"
        android:title = "@string/LogOut"
        app:showAsAction="ifRoom"
        />

</menu>